# yumift

./: README.md
controller/: CMakeLists.txt
controller/launch/: base.launch  sensors.launch  sensors_tools.launch  yumi_real.launch  yumi_sim.launch
controller/msg/: Trajectory_msg.msg  Trajectory_point.msg
controller/src/controllers/: gains.py  trajectory_controllers.py
yumi_controller/: CMakeLists.txt  README.md  package.xml  setup.py
yumi_controller/config/: config_hardware_egm.yaml  egm_settings.yaml
yumi_controller/launch/: base.launch  bringup.launch  display.launch  sensors.launch  sensors_raw.launch  sensors_tools.launch  setup_rws_egm.launch  state_updater.launch  unified_state_updater.launch  use_real.launch  use_real_individual.launch  use_sim.launch  use_sim_individual.launch  yumi_real.launch  yumi_sim.launch
yumi_controller/msg/: Jacobian.msg  RobotState.msg  Trajectory_msg.msg  Trajectory_point.msg  YumiKinematics.msg  YumiPosture.msg  YumiTrajectory.msg  YumiVelocity.msg
yumi_description/: CMakeLists.txt  README.md  package.xml
yumi_description/launch/: display.launch  load.launch  view.launch
yumi_description/meshes/ftsensor/: ftsensor.stl
yumi_description/rviz/: touchboard.rviz  urdf.rviz  yumi.rviz
yumi_description/urdf/: yumi.urdf  yumi.urdf.xacro  yumi.xacro  yumi_ORIGINAL.urdf
yumi_description/urdf/Grippers/: smart_gripper.gazebo.xacro  smart_gripper.transmission.xacro  smart_gripper.xacro  yumi_servo_gripper.xacro
yumi_description/urdf/Sensors/: ftsensor.gazebo.xacro  ftsensor.xacro
yumi_description/urdf/Yumi/: yumi.xacro
(+172 files in other folders)
