<?xml version="1.0"?>
<package format="2">
  <name>yumi_description</name>
  <version>0.5.0</version>

  <description>YuMi URDF with force sensors.</description>
  
  <maintainer email="sebastiano.fregnan@control.lth.se">Sebastiano Fregnan</maintainer>

  <author email="sebastiano.fregnan@control.lth.se">Sebastiano Fregnan</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
